tests/ui/associated-types/param-env-shadowing-false-positive.rs
trait Trait {
    type Assoc;
}

impl<T> Trait for T {
    type Assoc = T;
}

fn foo<T: Trait>(x: T::Assoc) -> u32 {
    x //~ ERROR mismatched types
}

fn main() {}
